fix text color on comment listing subtitles

--- a/app/src/main/res/layout/listings_comment.xml
+++ b/app/src/main/res/layout/listings_comment.xml
@@ -46,7 +46,7 @@
                 android:gravity="start"
                 android:fontFamily="sans-serif-light"
                 android:textAppearance="?android:textAppearanceSmall"
-                android:textColor="?attr/textColorInverse"
+                android:textColor="?attr/textColorSecondary"
                 tools:text="comment reply on /r/gamedev"
                 tools:ignore="UnusedAttribute" />
 
