Fix private message view

--- a/app/src/main/res/layout/listings_message_nocard.xml
+++ b/app/src/main/res/layout/listings_message_nocard.xml
@@ -3,8 +3,7 @@
     android:id="@+id/item_row"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/white">
+    android:layout_height="wrap_content">
 
     <include layout="@layout/message_layout" />
 
