--- a/app/src/main/res/layout/submission_fragment.xml
+++ b/app/src/main/res/layout/submission_fragment.xml
@@ -85,9 +85,9 @@
                 android:layout_height="48dp"
                 android:layout_margin="16dp"
                 android:elevation="8dp"
-                android:background="?attr/colorPrimaryDark"
+                android:background="?attr/colorPrimary"
                 android:text="@string/submission_submit"
-                android:textColor="?attr/textColorInverse"
+                android:textColor="?attr/textColorPrimary"
                 tools:targetApi="lollipop" />
 
         </LinearLayout>
