--- a/app/src/main/res/layout/message_layout.xml
+++ b/app/src/main/res/layout/message_layout.xml
@@ -11,7 +11,7 @@
         android:paddingRight="@dimen/link_list_item_margin_horizontal"
         android:gravity="center_vertical"
         android:orientation="vertical"
-        android:background="?attr/colorPrimaryDark">
+        android:background="?attr/cardTopBackgroundColor">
 
         <TextView
             android:id="@+id/conversation_subject"
