--- a/app/src/main/res/layout/message_layout.xml
+++ b/app/src/main/res/layout/message_layout.xml
@@ -1,6 +1,7 @@
 <merge
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="@layout/listings_message">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -9,9 +10,9 @@
         android:paddingBottom="@dimen/link_list_item_margin_vertical"
         android:paddingLeft="@dimen/link_list_item_margin_horizontal"
         android:paddingRight="@dimen/link_list_item_margin_horizontal"
+        android:background="?attr/contentSecondaryBackgroundColor"
         android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:background="?attr/cardTopBackgroundColor">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/conversation_subject"
@@ -21,7 +22,7 @@
             android:gravity="start"
             android:fontFamily="sans-serif-light"
             android:textAppearance="?android:textAppearanceMedium"
-            android:textColor="?attr/textColorPrimary"
+            android:textColor="?attr/contentSecondaryTextColor"
             tools:text="The brown fox jumped over the white fence"
             tools:ignore="UnusedAttribute" />
 
@@ -31,6 +32,7 @@
         android:id="@+id/conversation_body_layout"
         android:orientation="vertical"
         android:layout_width="match_parent"
+        android:background="?attr/contentPrimaryBackgroundColor"
         android:layout_height="wrap_content">
 
         <LinearLayout
