fix divider color for link metadata

--- a/app/src/main/res/values/styles_theme.xml
+++ b/app/src/main/res/values/styles_theme.xml
@@ -16,7 +16,7 @@
         <item name="textColorHighlight">?attr/textColorPrimary</item>
         <item name="textColorLink">@color/blue</item>
         <item name="quoteBlockColor">@color/bluegrey500</item>
-        <item name="dividerColor">@color/black_12pct</item>
+        <item name="dividerColor">@color/white_20pct</item>
         <item name="iconColor">@color/white</item>
         <item name="nsfwColor">@color/venetian_red</item>
         <item name="redditGoldColor">@color/golden_yellow</item>
