--- a/app/src/main/res/values/attrs_theme.xml
+++ b/app/src/main/res/values/attrs_theme.xml
@@ -33,5 +33,6 @@
     <attr name="contentDislikedColor" format="color" />
     <attr name="unreadMessageIndicatorColor" format="color" />
     <attr name="optionsBarActivatedColor" format="color" />
+    <attr name="navigationDrawerBackgroundColor" format="color" />
 
 </resources>
