--- a/app/src/main/res/values/styles_theme.xml
+++ b/app/src/main/res/values/styles_theme.xml
@@ -6,6 +6,8 @@
         <item name="colorPrimary">@color/bluegrey500</item>
         <item name="colorPrimaryDark">@color/bluegrey700</item>
         <item name="colorAccent">@color/redA200</item>
+        <item name="dialogTheme">@style/StandardDialogTheme</item>
+        <item name="alertDialogTheme">@style/StandardDialogTheme</item>
         <!-- Custom attributes -->
         <item name="colorPrimaryLight">@color/bluegrey100</item>
         <item name="colorPrimaryTextColor">@color/white</item>
@@ -44,6 +46,8 @@
         <item name="colorPrimary">@color/gray900</item>
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorAccent">@color/redA200</item>
+        <item name="dialogTheme">@style/NightDialogTheme</item>
+        <item name="alertDialogTheme">@style/NightDialogTheme</item>
         <!-- Custom attributes -->
         <item name="colorPrimaryLight">@color/gray800</item>
         <item name="colorPrimaryTextColor">@color/white</item>
@@ -76,6 +80,18 @@
         <item name="unreadMessageIndicatorColor">@color/orangered</item>
         <item name="optionsBarActivatedColor">@color/light_slate_blue</item>
         <item name="navigationDrawerBackgroundColor">?attr/colorPrimary</item>
+    </style>
+
+    <style name="StandardDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorPrimary">@color/bluegrey500</item>
+        <item name="colorPrimaryDark">@color/bluegrey700</item>
+        <item name="colorAccent">@color/redA200</item>
+    </style>
+
+    <style name="NightDialogTheme" parent="Theme.AppCompat.Dialog">
+        <item name="colorPrimary">@color/gray900</item>
+        <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorAccent">@color/redA200</item>
     </style>
 
 </resources>
