--- a/app/src/main/res/layout/user_profile_summary.xml
+++ b/app/src/main/res/layout/user_profile_summary.xml
@@ -5,7 +5,7 @@
     android:id="@+id/user_profile_summary"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?android:attr/colorBackground"
+    android:background="?attr/windowBackgroundColorNeutral"
     android:fillViewport="true">
 
     <LinearLayout
