--- a/app/src/main/res/values/attrs_theme.xml
+++ b/app/src/main/res/values/attrs_theme.xml
@@ -3,6 +3,8 @@
 
     <attr name="colorPrimaryLight" format="color" />
     <attr name="colorPrimaryTextColor" format="color" />
+    <attr name="windowBackgroundColor" format="color" />
+    <attr name="windowBackgroundColorNeutral" format="color" />
     <attr name="textColorPrimary" format="color" />
     <attr name="textColorSecondary" format="color" />
     <attr name="textColorInverse" format="color" />
