--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,8 @@
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item> <!-- For 2.x version -->
         <item name="android:windowActionModeOverlay">true</item>
+        <!-- app background color -->
+        <item name="android:windowBackground">?attr/windowBackgroundColor</item>
     </style>
 
     <style name="BaseNightAppTheme" parent="Theme.AppCompat.NoActionBar">
@@ -13,6 +15,8 @@
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item> <!-- For 2.x version -->
         <item name="android:windowActionModeOverlay">true</item>
+        <!-- app background color -->
+        <item name="android:windowBackground">?attr/windowBackgroundColor</item>
     </style>
 
     <style name="StandardAppTheme" parent="BaseStandardAppTheme" />
