add attributes for button colors

--- a/app/src/main/res/layout/subreddit_info_fragment.xml
+++ b/app/src/main/res/layout/subreddit_info_fragment.xml
@@ -85,7 +85,7 @@
                         android:includeFontPadding="false"
                         android:padding="8dp"
                         android:textAllCaps="true"
-                        android:textColor="?attr/textColorInverse"
+                        android:textColor="?attr/buttonTextColor"
                         android:textSize="@dimen/button_text_size"
                         tools:text="@string/subscribed" />
 
